--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
 	<groupId>com.nhl.bootique.jetty</groupId>
 	<artifactId>bootique-jetty</artifactId>
-	<version>0.6</version>
+	<version>0.7-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>Jetty Integration Bundle for Bootique</name>
@@ -25,7 +25,7 @@
 
 	<scm>
 		<developerConnection>scm:git:ssh://git@github.com/nhl/bootique-jetty</developerConnection>
-		<tag>bootique-jetty-0.6</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<repositories>
