--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
 	<groupId>com.nhl.bootique.jetty</groupId>
 	<artifactId>bootique-jetty</artifactId>
-	<version>0.9-SNAPSHOT</version>
+	<version>0.9</version>
 	<packaging>jar</packaging>
 
 	<name>Jetty Integration Bundle for Bootique</name>
@@ -26,7 +26,7 @@
 	<scm>
 		<developerConnection>scm:git:ssh://git@github.com/nhl/bootique-jetty</developerConnection>
 		<url>https://github.com/nhl/bootique-jetty</url>
-		<tag>HEAD</tag>
+		<tag>bootique-jetty-0.9</tag>
 	</scm>
 
 	<dependencyManagement>
