--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 	<properties>
 		<jetty-version>9.3.6.v20151106</jetty-version>
 		<bootique-version>0.12-SNAPSHOT</bootique-version>
-		<bootique-metrics-version>0.5</bootique-metrics-version>
+		<bootique-metrics-version>0.6-SNAPSHOT</bootique-metrics-version>
 	</properties>
 
 	<scm>
