--- a/bootique-jetty/pom.xml
+++ b/bootique-jetty/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.nhl.bootique.jetty</groupId>
 		<artifactId>bootique-jetty-parent</artifactId>
-		<version>0.12</version>
+		<version>0.13-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>bootique-jetty</artifactId>
