--- a/bootique-jetty-docs/pom.xml
+++ b/bootique-jetty-docs/pom.xml
@@ -90,8 +90,8 @@
 					<xincludeSupported>true</xincludeSupported>
 					<highlightSource>true</highlightSource>
 					<targetDirectory>${basedir}/target/site</targetDirectory>
-					<includes>getting-started/index.xml,bootique-docs/index.xml</includes>
-\				</configuration>
+					<includes>bootique-jetty-docs/index.xml</includes>
+				</configuration>
 				<executions>
 					<execution>
 						<id>build-html</id>
@@ -99,16 +99,10 @@
 							<htmlCustomization>${project.build.outputDirectory}/xsl/html.xsl</htmlCustomization>
 							<chunkedOutput>false</chunkedOutput>
 							<postProcess>
-								<copy todir="${basedir}/target/site/getting-started/css">
+								<copy todir="${basedir}/target/site/bootique-jetty-docs/css">
 									<fileset dir="${basedir}/src/docbkx/css" />
 								</copy>
-								<copy todir="${basedir}/target/site/getting-started/img">
-									<fileset dir="${basedir}/src/docbkx/img" />
-								</copy>
-								<copy todir="${basedir}/target/site/bootique-docs/css">
-									<fileset dir="${basedir}/src/docbkx/css" />
-								</copy>
-								<copy todir="${basedir}/target/site/bootique-docs/img">
+								<copy todir="${basedir}/target/site/bootique-jetty-docs/img">
 									<fileset dir="${basedir}/src/docbkx/img" />
 								</copy>
 							</postProcess>
