--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 	<modules>
 		<module>bootique-jetty</module>
 		<module>bootique-jetty-instrumented</module>
+		<module>bootique-jetty-docs</module>
 	</modules>
 
 	<properties>
