--- a/bootique-jetty-instrumented/pom.xml
+++ b/bootique-jetty-instrumented/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
@@ -34,13 +35,15 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-simple</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
 			<groupId>com.nhl.bootique</groupId>
 			<artifactId>bootique-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<!-- using logback instead of SLF4J simple to test intrumented filters 
+			logging -->
+		<dependency>
+			<groupId>com.nhl.bootique.logback</groupId>
+			<artifactId>bootique-logback</artifactId>
 			<scope>test</scope>
 		</dependency>
 
