--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
@@ -63,6 +64,11 @@
 				<groupId>com.nhl.bootique.metrics</groupId>
 				<artifactId>bootique-metrics</artifactId>
 				<version>${bootique-metrics-version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.nhl.bootique.logback</groupId>
+				<artifactId>bootique-logback</artifactId>
+				<version>0.9</version>
 			</dependency>
 			<dependency>
 				<groupId>org.slf4j</groupId>
