--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 
 	<properties>
 		<jetty-version>9.3.6.v20151106</jetty-version>
-		<bootique-version>0.16</bootique-version>
+		<bootique-version>0.17-SNAPSHOT</bootique-version>
 		<bootique-metrics-version>0.6</bootique-metrics-version>
 	</properties>
 
