Upgrade to bootique 0.19 and metrics 0.7 to have access to healthchecks API #41

--- a/bootique-jetty-docs/pom.xml
+++ b/bootique-jetty-docs/pom.xml
@@ -18,7 +18,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <!-- This property allows to only expose major version in the docs metadata to avoid confusing SEO -->
+        <!-- This annotation allows to only expose major version in the docs metadata to avoid confusing SEO -->
         <bootique.version.major>0</bootique.version.major>	
 	</properties>
 
