--- a/bootique-jetty-test/pom.xml
+++ b/bootique-jetty-test/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>com.nhl.bootique.jetty</groupId>
+		<groupId>io.bootique.jetty</groupId>
 		<artifactId>bootique-jetty-parent</artifactId>
 		<version>0.17-SNAPSHOT</version>
 	</parent>
@@ -44,13 +44,13 @@
 
 		<!-- Compile dependencies -->
 		<dependency>
-			<groupId>com.nhl.bootique.jetty</groupId>
+			<groupId>io.bootique.jetty</groupId>
 			<artifactId>bootique-jetty</artifactId>
 			<version>${project.version}</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.nhl.bootique</groupId>
+			<groupId>io.bootique</groupId>
 			<artifactId>bootique-test</artifactId>
 			<scope>compile</scope>
 		</dependency>
