--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,9 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>io.bootique.parent</groupId>
-		<artifactId>bootique-parent</artifactId>
-		<version>0.12</version>
+		<groupId>io.bootique.modules.parent</groupId>
+		<artifactId>bootique-modules-parent</artifactId>
+		<version>0.2</version>
 	</parent>
 
 	<groupId>io.bootique.jetty</groupId>
@@ -30,12 +30,6 @@
 		<bootique-version>0.19-SNAPSHOT</bootique-version>
 		<bootique-metrics-version>0.7-SNAPSHOT</bootique-metrics-version>
 	</properties>
-
-	<scm>
-		<developerConnection>scm:git:ssh://git@github.com/bootique/bootique-jetty</developerConnection>
-		<url>https://github.com/bootique/bootique-jetty</url>
-		<tag>HEAD</tag>
-	</scm>
 
 	<dependencyManagement>
 		<dependencies>
@@ -81,14 +75,6 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
-
-	<build>
-		<plugins>
-			<plugin>
-				<artifactId>maven-failsafe-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</build>
 
 	<!-- Optional profile used to sign artifacts -->
 	<profiles>
