--- a/pom.xml
+++ b/pom.xml
@@ -27,9 +27,23 @@
 
 	<properties>
 		<jetty-version>9.3.6.v20151106</jetty-version>
-		<bootique-version>0.19-SNAPSHOT</bootique-version>
-		<bootique-metrics-version>0.7-SNAPSHOT</bootique-metrics-version>
+		<bootique-version>0.19</bootique-version>
+		<bootique-metrics-version>0.7</bootique-metrics-version>
 	</properties>
+
+	<scm>
+        <developerConnection>scm:git:ssh://git@github.com/bootique/bootique-jetty</developerConnection>
+        <url>https://github.com/bootique/bootique-jetty</url>
+        <tag>HEAD</tag>
+    </scm>
+
+    <distributionManagement>
+        <repository>
+            <id>bintray-bootique-releases</id>
+            <name>bintray-bootique-releases</name>
+            <url>https://api.bintray.com/maven/bootique/releases/bootique-jetty/;publish=1</url>
+        </repository>
+    </distributionManagement>
 
 	<dependencyManagement>
 		<dependencies>
