Upgrade to Bootique 0.20 #48

--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 
 	<properties>
 		<jetty-version>9.3.6.v20151106</jetty-version>
-		<bootique-version>0.19</bootique-version>
+		<bootique-version>0.20-SNAPSHOT</bootique-version>
 		<bootique-metrics-version>0.7</bootique-metrics-version>
 	</properties>
 
