--- a/bootique-jetty-test/pom.xml
+++ b/bootique-jetty-test/pom.xml
@@ -45,7 +45,7 @@
 		<!-- Compile dependencies -->
 		<dependency>
 			<groupId>io.bootique.jetty</groupId>
-			<artifactId>bootique-jetty</artifactId>
+			<artifactId>bootique-jetty-instrumented</artifactId>
 			<version>${project.version}</version>
 			<scope>compile</scope>
 		</dependency>
