--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 	<properties>
 		<jetty-version>9.3.6.v20151106</jetty-version>
 		<bootique-version>0.20-SNAPSHOT</bootique-version>
-		<bootique-metrics-version>0.7</bootique-metrics-version>
+		<bootique-metrics-version>0.8-SNAPSHOT</bootique-metrics-version>
 	</properties>
 
 	<scm>
