--- a/bootique-jetty/pom.xml
+++ b/bootique-jetty/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>io.bootique.jetty</groupId>
 		<artifactId>bootique-jetty-parent</artifactId>
-		<version>0.18</version>
+		<version>0.19-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>bootique-jetty</artifactId>
