--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
 	<groupId>io.bootique.jetty</groupId>
 	<artifactId>bootique-jetty-parent</artifactId>
-	<version>0.19</version>
+	<version>0.20-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>bootique-jetty-parent: parent of Bootique/Jetty integration modules</name>
@@ -33,7 +33,7 @@
 	<scm>
         <developerConnection>scm:git:ssh://git@github.com/bootique/bootique-jetty</developerConnection>
         <url>https://github.com/bootique/bootique-jetty</url>
-        <tag>bootique-jetty-parent-0.19</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <distributionManagement>
