--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 
 	<properties>
 		<jetty-version>9.3.6.v20151106</jetty-version>
-		<bootique-version>0.21</bootique-version>
+		<bootique-version>0.22-SNAPSHOT</bootique-version>
 		<bootique-metrics-version>0.8</bootique-metrics-version>
 	</properties>
 
