--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 
 	<properties>
 		<jetty-version>9.3.6.v20151106</jetty-version>
-		<bootique-version>0.22</bootique-version>
+		<bootique-version>0.23-SNAPSHOT</bootique-version>
 		<bootique-metrics-version>0.9</bootique-metrics-version>
 	</properties>
 
