--- a/pom.xml
+++ b/pom.xml
@@ -27,8 +27,8 @@
 
 	<properties>
 		<jetty-version>9.3.6.v20151106</jetty-version>
-		<bootique-version>0.23-SNAPSHOT</bootique-version>
-		<bootique-metrics-version>0.9</bootique-metrics-version>
+		<bootique-version>0.23</bootique-version>
+		<bootique-metrics-version>0.10</bootique-metrics-version>
 	</properties>
 
 	<scm>
