--- a/bootique-jetty-metrics/pom.xml
+++ b/bootique-jetty-metrics/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>io.bootique.jetty</groupId>
         <artifactId>bootique-jetty-parent</artifactId>
-        <version>0.21-SNAPSHOT</version>
+        <version>0.21</version>
     </parent>
 
     <artifactId>bootique-jetty-metrics</artifactId>
