--- a/bootique-jetty-metrics/pom.xml
+++ b/bootique-jetty-metrics/pom.xml
@@ -19,7 +19,7 @@
         <!-- Compile dependencies -->
         <dependency>
             <groupId>io.bootique.metrics</groupId>
-            <artifactId>bootique-metrics</artifactId>
+            <artifactId>bootique-metrics-healthchecks</artifactId>
             <scope>compile</scope>
         </dependency>
         <dependency>
