Thread pool state health check #68

--- a/bootique-jetty-instrumented/pom.xml
+++ b/bootique-jetty-instrumented/pom.xml
@@ -29,6 +29,11 @@
 			<artifactId>bootique-metrics</artifactId>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>io.bootique.metrics</groupId>
+			<artifactId>bootique-metrics-healthchecks</artifactId>
+			<scope>compile</scope>
+		</dependency>
 
 		<!-- Unit test dependencies -->
 		<dependency>
