Use percentage metric for thread pool utilization check #77

--- a/bootique-jetty-instrumented/src/test/resources/health8.yml
+++ b/bootique-jetty-instrumented/src/test/resources/health8.yml
@@ -8,5 +8,5 @@ jetty:
       warning: 2
       critical: 3
     poolUtilizationThresholds:
-      warning: 0.6
-      critical: 0.9
+      warning: 60%
+      critical: 90%
