--- a/bootique-jetty/pom.xml
+++ b/bootique-jetty/pom.xml
@@ -55,6 +55,11 @@
 			<artifactId>jersey-client</artifactId>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>javax.activation</groupId>
+            <artifactId>activation</artifactId>
+            <scope>test</scope>
+        </dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-simple</artifactId>
