--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 		<module>bootique-jetty-instrumented</module>
 		<module>bootique-jetty-metrics</module>
 		<module>bootique-jetty-docs</module>
-	</modules>
+    </modules>
 
 	<properties>
 		<jetty-version>9.4.9.v20180320</jetty-version>
@@ -47,12 +47,22 @@
 		<dependencies>
 			<dependency>
 				<groupId>org.eclipse.jetty</groupId>
+				<artifactId>jetty-client</artifactId>
+				<version>${jetty-version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.eclipse.jetty</groupId>
 				<artifactId>jetty-server</artifactId>
 				<version>${jetty-version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.eclipse.jetty</groupId>
 				<artifactId>jetty-servlet</artifactId>
+				<version>${jetty-version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.eclipse.jetty</groupId>
+				<artifactId>jetty-servlets</artifactId>
 				<version>${jetty-version}</version>
 			</dependency>
 			<dependency>
