#39 Added jetty cors filter

--- a/bootique-jetty/pom.xml
+++ b/bootique-jetty/pom.xml
@@ -31,10 +31,7 @@
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-servlets</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.jetty</groupId>
-			<artifactId>jetty-client</artifactId>
+            <scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>io.bootique</groupId>
@@ -73,6 +70,11 @@
 			<artifactId>bootique-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-client</artifactId>
+            <scope>test</scope>
+        </dependency>
 	</dependencies>
 
 	<!-- Optional profile used to sign artifacts -->
