--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>io.bootique.modules.parent</groupId>
 		<artifactId>bootique-modules-parent</artifactId>
-		<version>0.8</version>
+		<version>0.10</version>
 	</parent>
 
 	<groupId>io.bootique.jetty</groupId>
@@ -25,8 +25,7 @@
 	</modules>
 
 	<properties>
-		<jetty-version>9.4.9.v20180320</jetty-version>
-		<bootique-version>${project.version}</bootique-version>
+		<bootique.version>${project.version}</bootique.version>
 	</properties>
 
 	<scm>
@@ -46,44 +45,24 @@
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
-				<groupId>org.eclipse.jetty</groupId>
-				<artifactId>jetty-server</artifactId>
-				<version>${jetty-version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.eclipse.jetty</groupId>
-				<artifactId>jetty-servlet</artifactId>
-				<version>${jetty-version}</version>
-			</dependency>
-			<dependency>
 				<groupId>io.bootique</groupId>
 				<artifactId>bootique</artifactId>
-				<version>${bootique-version}</version>
+				<version>${bootique.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>io.bootique</groupId>
 				<artifactId>bootique-test</artifactId>
-				<version>${bootique-version}</version>
+				<version>${bootique.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>io.bootique.metrics</groupId>
 				<artifactId>bootique-metrics</artifactId>
-				<version>${bootique-version}</version>
+				<version>${bootique.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>io.bootique.metrics</groupId>
 				<artifactId>bootique-metrics-healthchecks</artifactId>
-				<version>${bootique-version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.slf4j</groupId>
-				<artifactId>slf4j-simple</artifactId>
-				<version>${slf4j.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.glassfish.jersey.core</groupId>
-				<artifactId>jersey-client</artifactId>
-				<version>2.21</version>
+				<version>${bootique.version}</version>
 			</dependency>
             <dependency><!-- Transitive dependency of jersey-client -->
                 <groupId>javax.activation</groupId>
