--- a/pom.xml
+++ b/pom.xml
@@ -113,5 +113,38 @@
 				</plugins>
 			</build>
 		</profile>
+
+		<profile>
+			<id>rat</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.rat</groupId>
+						<artifactId>apache-rat-plugin</artifactId>
+						<version>0.12</version>
+						<executions>
+							<execution>
+								<phase>verify</phase>
+								<goals>
+									<goal>check</goal>
+								</goals>
+
+							</execution>
+						</executions>
+						<configuration>
+							<excludes combine.children="append">
+								<!-- This block will be moved to the modules parent module.
+                                     It can't be moved now because of fail of some depended modules.-->
+								<exclude>**/RELEASE-NOTES.md</exclude>
+								<exclude>**/LICENSE</exclude>
+								<exclude>**/META-INF/services/</exclude>
+								<exclude>**/NOTICES</exclude>
+								<exclude>**/.gitignore</exclude>
+							</excludes>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
 	</profiles>
 </project>
