#39 Added JettyServlets module, turned BootiqueCorsFactory to real factory, updated tests

--- a/bootique-jetty/src/test/resources/io/bootique/jetty/cors/CorsFilter.yml
+++ b/bootique-jetty/src/test/resources/io/bootique/jetty/cors/CorsFilter.yml
@@ -2,7 +2,8 @@ jetty:
   connectors:
     - port: 15001
     - port: 15002
-  bootiqueCors:
+jettyservlets:
+  cors:
     urlPatterns:
       - "/api"
     allowedOrigins: "test"
