--- a/bootique-jetty/pom.xml
+++ b/bootique-jetty/pom.xml
@@ -24,7 +24,7 @@
 	<parent>
 		<groupId>io.bootique.jetty</groupId>
 		<artifactId>bootique-jetty-parent</artifactId>
-		<version>0.26-SNAPSHOT</version>
+		<version>1.0.RC1-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>bootique-jetty</artifactId>
