--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 
 	<groupId>io.bootique.jetty</groupId>
 	<artifactId>bootique-jetty-parent</artifactId>
-	<version>0.26-SNAPSHOT</version>
+	<version>1.0.RC1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>bootique-jetty-parent: parent of Bootique/Jetty integration modules</name>
